Added java GC